// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
[
  .c0 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c0 :checked+label {
  background: green;
}

.c0 :checked+label:after {
  left: calc(100% - 5px);
  transform: translateX(-100%);
}

<input
    checkedBackground="green"
    className="c0"
    id="switch"
    onChange={[Function]}
    padding={5}
    type="checkbox"
  />,
  .c0 {
  cursor: pointer;
  width: 100px;
  height: 50px;
  background: lightgray;
  display: block;
  border-radius: 20px;
  position: relative;
}

.c0 :after {
  content: '';
  position: absolute;
  top: 5px;
  left: 5px;
  width: 40%;
  height: calc(100% - 10px);
  background: white;
  border-radius: 20px;
  transition: 0.3s;
}

.c0 :active:after {
  width: 60%;
}

<label
    borderRadius="20px"
    buttonColor="white"
    checkedBackground="green"
    className="c0"
    height="50px"
    htmlFor="switch"
    offBackground="lightgray"
    padding={5}
    width="100px"
  />,
]
`;

exports[`Test with props 1`] = `
[
  .c0 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c0 :checked+label {
  background: #000;
}

.c0 :checked+label:after {
  left: calc(100% - 5px);
  transform: translateX(-100%);
}

<input
    checkedBackground="#000"
    className="c0"
    id="switch"
    onChange={[Function]}
    padding={5}
    type="checkbox"
  />,
  .c0 {
  cursor: pointer;
  width: 2.5em;
  height: 2.5em;
  background: #27847A;
  display: block;
  border-radius: 1.25em;
  position: relative;
}

.c0 :after {
  content: '';
  position: absolute;
  top: 5px;
  left: 5px;
  width: 40%;
  height: calc(100% - 10px);
  background: white;
  border-radius: 1.25em;
  transition: 0.3s;
}

.c0 :active:after {
  width: 60%;
}

<label
    borderRadius="1.25em"
    buttonColor="white"
    checkedBackground="#000"
    className="c0"
    height="2.5em"
    htmlFor="switch"
    offBackground="#27847A"
    padding={5}
    width="2.5em"
  />,
]
`;
